--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
     "react-native-element-dropdown": "^2.10.4",
-    "react-native-modern-datepicker": "^1.0.0-beta.91"
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
